2003-11-25  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.m4 (gl_PREREQ_PRINTF_PARSE): Don't require
	gt_TYPE_SSIZE_T.

2003-11-17  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.m4 (gl_PREREQ_PRINTF_PARSE): Require gt_TYPE_SSIZE_T.

2003-11-12  Paul Eggert  <eggert@twinsun.com>

	* xalloc.m4 (gl_PREREQ_XALLOC): Do not require gl_SIZE_MAX or
	gl_PTRDIFF_MAX.

2003-11-11  Bruno Haible  <bruno@clisp.org>

	* size_max.m4: New file.
	* ptrdiff_max.m4: New file.
	* xsize,m4 (gl_XSIZE): Require gl_SIZE_MAX.
	* xalloc.m4 (gl_PREREQ_XALLOC): New macro.
	(gl_XALLOC): Invoke it.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* xsize.m4: New file.

2003-11-03  Bruno Haible  <bruno@clisp.org>

	* wait-process.m4 (gl_WAIT_PROCESS): Also check for waitid.

2003-10-30  Paul Eggert  <eggert@cs.ucla.edu>

	* host-os.m4 (UTILS_HOST_OS): Change netbsd*-gnu pattern back to
	netbsd*-gnu*.  Suggested by Robert Millan.

2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* xalloc.m4 (gl_XALLOC): Undo previous change.

2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* host-os.m4 (UTILS_HOST_OS): Resurrect netbsd*-gnu.  Add comments
	to it, and to knetbsd*-gnu and kfreebsd*-gnu.  Remove the '*' from
	after the 'gnu' in these cases.  This fixes some bugs in the
	previous change, and is based on suggestions by Robert Millan.

2003-10-28  Paul Eggert  <eggert@twinsun.com>

	* host-os.m4 (UTILS_HOST_OS): Identify GNU/KFreeBSD and
	GNU/KNetBSD.  These implementations use glibc atop the FreeBSD and
	NetBSD kernels.  Requested by Richard Stallman.

2003-10-26  Paul Eggert  <eggert@twinsun.com>

	* xalloc.m4 (gl_XALLOC): Requore AC_C_INLINE, since xalloc.h
	now uses inline.

2003-10-23  Paul Eggert  <eggert@twinsun.com>

	* getline.m4 (AM_FUNC_GETLINE):
	Don't include getndelim2.o twice into LIBOBJS; this breaks on some
	hosts.  Problem reported by Derek Robert Price in
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-10/msg00092.html>.